# shared-secure-peripherals

./: Config.in  LICENSE  external.desc  external.mk  post-build.sh  post-image.sh
configs/: imx6q_sabrelite_defconfig
overlay/etc/network/: interfaces
package/benchmarker/: Config.in  Makefile  benchmarker.c  benchmarker.mk
package/fs-load/: CMakeLists.txt  Config.in  fs-load.mk
package/fs-load/host/: main.c
package/fs-load/plugin/: CMakeLists.txt  fs-load.c
package/linux-watchdog/: CMakeLists.txt  Config.in  Makefile  S31linux-watchdog  linux-watchdog.c  linux-watchdog.mk
package/linux-watchdog/host/: main.c
package/normal-controller/: Config.in  Makefile  normal-controller.c  normal-controller.h  normal-controller.mk
package/normal-ssp-driver/: Config.in  Makefile  normal-ssp-driver.c  normal-ssp-driver.mk
